# MuteMic

./: .gitignore  App.idl  App.xaml  App.xaml.cpp  App.xaml.h  Directory.Build.props  Directory.Build.targets  LICENSE  MainWindow.idl  MainWindow.xaml  MainWindow.xaml.cpp  MainWindow.xaml.h  MuteMic.rc  MuteMic.sln  MuteMic.vcxproj  README.md  XamlGeneratedBodies.cpp  app.manifest  pch.h
.github/: copilot-instructions.md
Core/: AudioController.cpp  AudioController.h  Autostart.cpp  Autostart.h  HotkeyHook.cpp  HotkeyHook.h  IconRenderer.cpp  IconRenderer.h  LiquidGlass.hlsl  LiquidGlassBackdrop.cpp  LiquidGlassBackdrop.h  MuteMicCore.cpp  MuteMicCore.h  SettingsStore.cpp  SettingsStore.h  TrayIcon.cpp  TrayIcon.h  VisualCue.cpp  VisualCue.h
Generated Files/: App.xaml.g.h  MainWindow.xaml.g.h  XamlBindingInfo.xaml.g.h  XamlMetaDataProvider.cpp  XamlMetaDataProvider.h  XamlTypeInfo.Impl.g.cpp  XamlTypeInfo.xaml.g.h
Themes/: Colors.xaml  Styles.xaml
legacy-win32/: CMakeLists.txt  README.md  audio.cpp  audio.h  autostart.cpp  autostart.h  build.bat  icons.cpp  icons.h  main.cpp  tray.cpp  tray.h
